--- a/Coding Ninja/1.HelloWorld.ipynb
+++ b/Coding Ninja/1.HelloWorld.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2d69a808",
+   "execution_count": 33,
+   "id": "f034e292",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Helloworld\n"
+      "hello world\n"
      ]
     }
    ],
    "source": [
-    "print('Helloworld')"
+    "print('hello world')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebbbdda3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -35,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
