Aaded Q30 Two sum in array

--- a/DSA Development/Array Questions/Q29 MinIndesofSumList.ipynb
+++ b/DSA Development/Array Questions/Q29 MinIndesofSumList.ipynb
@@ -44,6 +44,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['w', 'wo', 'wor', 'worl', 'world']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = [\"wo\",\"world\",\"wor\",\"worl\",\"w\"]\n",
+    "c = sorted(words)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
