--- a/DSA Development/Array Questions/Q6. 2Sum.ipynb
+++ b/DSA Development/Array Questions/Q6. 2Sum.ipynb
@@ -2,39 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "df235bcb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    " def twoSum( nums, target):\n",
+    "def twoSum( nums, target):\n",
     "\n",
-    "        s = 0\n",
-    "        e = len(nums)-1\n",
+    "    s = 0\n",
+    "    e = len(nums)-1\n",
     "\n",
-    "        while s < e:\n",
+    "    while s < e:\n",
     "\n",
-    "            sum = nums[s] + nums[e]\n",
-    "\n",
-    "            if sum >= target:\n",
-    "                e -= 1\n",
-    "            elif sum <= target:\n",
-    "                \n",
-    "                s += 1\n",
-    "            else:\n",
-    "                return [s,e]\n",
+    "        sum = nums[s] + nums[e]\n",
+    "        if sum >= target:\n",
+    "            e -= 1\n",
+    "        elif sum <= target:\n",
+    "            \n",
+    "            s += 1\n",
+    "        else:\n",
+    "            return [s,e]\n",
     "nums = [3,2,4]\n",
     "target = 6\n",
-    "ans = twoSum(nums,target)\n",
-    "print(ans)"
+    "twoSum(nums,target)\n"
    ]
   },
   {
@@ -95,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
