remove unnecessary line in Q11

--- a/DSA Development/String Questions/Q.11MultiplyOf2Strings.ipynb
+++ b/DSA Development/String Questions/Q.11MultiplyOf2Strings.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "456\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'56088'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,9 +31,11 @@
     "\n",
     "    for i in s1:\n",
     "        d1 = d1*10 + num[i]\n",
+    "    print(d1)\n",
     "\n",
     "    for j in s2:\n",
     "        d2 = d2*10 + num[j]\n",
+    "    print(d2)\n",
     "\n",
     "    return str(d1*d2)\n",
     "\n",
@@ -38,55 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2', '10']\n"
-     ]
-    }
-   ],
-   "source": [
-    "nums = [10,2]\n",
-    "s = [str(num) for num in nums]\n",
-    "s.sort(key=lambda x: x * 10, reverse=True)\n",
-    "print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "square = lambda x: x ** 2\n",
-    "print(square(4)) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " def largestNumber(nums):\n",
-    "        s = [str(num) for num in nums]\n",
-    "        s.sort(key=lambda x: x * 10, reverse=True)\n",
-    "        return '0' if s[0] == '0' else ''.join(s)\n",
-    "nums = [3,30,34,5,9]\n",
-    "largestNumber(nums  ''"
-   ]
+   "source": []
   }
  ],
  "metadata": {
