--- a/DSA Development/String Questions/Q19 LongestPalindromrString.ipynb
+++ b/DSA Development/String Questions/Q19 LongestPalindromrString.ipynb
@@ -6,8 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def  NumberSegmentinString(s):\n",
-    "    return len(s.split())"
+    "def LongestPalindromrString(s):\n",
+    "\n",
+    "    if len(s) <= 1:\n",
+    "        return s\n",
+    "    maxlen = 1\n",
+    "    maxStr = s[0]\n",
+    "\n",
+    "    for i in range(len(s)-1):\n",
+    "        for j in range(i+1,len(s)):\n",
+    "            if j-i+1 > maxlen and s[i:j+1] == s[i:j+1][::-1]:\n",
+    "                maxlen = j-i+1\n",
+    "                maxStr = s[i:j+1]\n",
+    "    return maxStr\n"
    ]
   },
   {
@@ -18,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "'bab'"
       ]
      },
      "execution_count": 2,
@@ -27,8 +38,8 @@
     }
    ],
    "source": [
-    "s = \"Hello, my name is John\"\n",
-    "NumberSegmentinString(s)"
+    "s = \"babad\"\n",
+    "LongestPalindromrString(s)"
    ]
   },
   {
