Solved Q23 in string

--- a/DSA Development/String Questions/Q23 ReverseVowelOfString.ipynb
+++ b/DSA Development/String Questions/Q23 ReverseVowelOfString.ipynb
@@ -2,67 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def  WordPattern(pattern,s):\n",
-    "    arr= s.split()\n",
-    "    if len(arr)  != len(pattern):\n",
-    "        return False\n",
-    "    \n",
-    "    for i in range(len(arr)):\n",
+    "def ReverseVowelOfString(s):\n",
     "\n",
-    "        if pattern.find(pattern[i]) != arr.index(arr[i]):\n",
-    "            return False\n",
-    "    return True\n",
+    "    ans  = list(s)\n",
+    "    vowels = \"aeiouAIOU\"\n",
+    "    l = 0\n",
+    "    r = len(ans)-1\n",
     "\n",
-    "    "
+    "    while l<r:\n",
+    "        if ans[l] in vowels and ans[r] in vowels:\n",
+    "            ans[l],ans[r] = ans[r],ans[l]\n",
+    "            l+=1\n",
+    "            r-=1\n",
+    "        elif ans[l] not in vowels:\n",
+    "            l+=1\n",
+    "        elif ans[r] not in vowels:\n",
+    "            r-=1\n",
+    "\n",
+    "    return \" \".join(ans)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'h o l l e'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = \"abba\"\n",
-    "s = \"dog cat cat dog\"\n",
-    "WordPattern(pattern,s)\n"
+    "s = \"hello\"\n",
+    "ReverseVowelOfString(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "'l e o t c e d e'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = \"abba\"\n",
-    "s = \"dog cat cat fish\"\n",
-    "WordPattern(pattern,s)"
+    "s = \"leetcode\"\n",
+    "ReverseVowelOfString(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
