Removed unnecessary lines

--- a/DSA Development/String Questions/Q22 WordPattern.ipynb
+++ b/DSA Development/String Questions/Q22 WordPattern.ipynb
@@ -63,6 +63,69 @@
     "s = \"dog cat cat fish\"\n",
     "WordPattern(pattern,s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aabb'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sortTreee(s):\n",
+    "    a = sorted(s)\n",
+    "\n",
+    "    return \"\".join(a)\n",
+    "\n",
+    "s = \"Aabb\"\n",
+    "sortTreee(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"tree\"\n",
+    "c = sorted(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['e', 'e', 'r', 't']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
