--- a/DSA Development/Array Questions/Q17.MissingNumber.ipynb
+++ b/DSA Development/Array Questions/Q17.MissingNumber.ipynb
@@ -69,8 +69,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6ef4b79c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def missingnumber(a):\n",
+    "    li = []\n",
+    "    b = set(a)\n",
+    "    for i in range(1,len(b)+1):\n",
+    "        if i not in b:\n",
+    "            li.append(i)\n",
+    "    return li\n",
+    "\n",
+    "a =  [1,3,5,6]\n",
+    "ans= missingnumber(a)\n",
+    "print(ans)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b76f663",
    "metadata": {},
    "outputs": [],
    "source": []
