--- a/Coding Ninja/Data structure and Algo/4.Time compexity/Application of complaxity analysis/1. Power of a number.ipynb
+++ b/Coding Ninja/Data structure and Algo/4.Time compexity/Application of complaxity analysis/1. Power of a number.ipynb
@@ -50,7 +50,7 @@
     "def powerofx(x,n):\n",
     "    if n == 0:\n",
     "        return 1\n",
-    "    smallpower = powerofn(x,n//2)\n",
+    "    smallpower = powerofx(x,n//2)\n",
     "    if n % 2==0:\n",
     "        return smallpower * smallpower\n",
     "    return x * smallpower*smallpower\n",
