--- a/DSA Development/BInaryTree/ConceptImplement and Questions.ipynb
+++ b/DSA Development/BInaryTree/ConceptImplement and Questions.ipynb
@@ -64,8 +64,8 @@
     "    if root == None:\n",
     "        return 0\n",
     "   \n",
-    "    leftH = height(root.left)\n",
-    "    rightH = height(root.right)\n",
+    "    leftH = heightMax(root.left)\n",
+    "    rightH = heightMax(root.right)\n",
     "    \n",
     "    maxheight = max(leftH,rightH)\n",
     "    \n",
