--- a/DSA Development/Array Questions/Q.38 CountNums.ipynb
+++ b/DSA Development/Array Questions/Q.38 CountNums.ipynb
@@ -18,7 +18,17 @@
     "\n",
     "\n",
     "arr = [5, 5, 5, 2, 3, 4, 2, 2, 3, 3, 4]\n",
-    "print(CountNums(arr))"
+    "print(CountNums(arr))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
