Solved Q47 Jump game

--- a/DSA Development/Array Questions/Q47. JumpGame.ipynb
+++ b/DSA Development/Array Questions/Q47. JumpGame.ipynb
@@ -2,41 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6d44ed21",
+   "execution_count": 8,
+   "id": "6e0af4e9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "True\n"
      ]
     }
    ],
    "source": [
-    "def BestTimeToBuyAndSell(a):\n",
-    "  maxProfit = 0\n",
-    "  BestBuy = a[0]\n",
-    "  for i in range(1,len(a)):\n",
-    "    if prices[i] > BestBuy:\n",
-    "      maxProfit = max(maxProfit, prices[i] - BestBuy)\n",
+    "def jumpGame(a):\n",
     "\n",
-    "    \n",
-    "    BestBuy = min(prices[i],BestBuy)\n",
-    "  \n",
-    "  return maxProfit\n",
-    "  \n",
+    "  maxIdx = 0\n",
+    "  for i in range(len(a)):\n",
+    "    if i>maxIdx: return False\n",
+    "    maxIdx = max(maxIdx,i+a[i])\n",
+    "  return True\n",
     "\n",
     "\n",
-    "prices = [7,1,5,3,6,4]\n",
-    "print(BestTimeToBuyAndSell(prices))"
+    "\n",
+    "\n",
+    "\n",
+    "# nums = [3,2,1,0,4]\n",
+    "nums = [2,3,1,1,4]\n",
+    "print(jumpGame(nums))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920f2d48",
+   "id": "f22be4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c56b931",
    "metadata": {},
    "outputs": [],
    "source": []
